--- a/src/user/components/templates/LandingPage/style.scss
+++ b/src/user/components/templates/LandingPage/style.scss
@@ -38,7 +38,7 @@
     .headerContentBtnCtn {
       flex: 30 0 auto;
       @include mq(md) {
-        margin-top: 100px;
+        //margin-top: 100px;
       }
     }
   }
