can refresh account info on check

--- a/src/user/components/partials/PostEditor/style.scss
+++ b/src/user/components/partials/PostEditor/style.scss
@@ -60,7 +60,9 @@
   background-size: cover;
   background-position: center;
 }
-
+.removeImageBtn {
+  cursor: pointer;
+}
 .instructions {
   text-align: left;
   h5 {
