--- a/src/shared/components/templates/AccountSubscription/style.scss
+++ b/src/shared/components/templates/AccountSubscription/style.scss
@@ -6,11 +6,19 @@
     font-weight: bold;
   }
 
+  .settingValue {
+    text-align: right;
+    .toggleButton {
+    }
+    div, a {
+      float: right;
+      width: 100%;
+
+    }
+  }
+
   //when toggled is closed, when opened though, is this
   .expandedForm {
     margin-top: 30px;
   }
-}
-.toggleButton {
-  float: right;
 }
