--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -65,6 +65,9 @@
       &.publishedPost {
         cursor: not-allowed !important;
         background-color: gray !important;
+        div {
+          border-bottom: gray !important;
+        }
       }
 
     }
