extract utm form; all popups close after clicking outside; utm help button

--- a/src/shared/components/groups/Popup/style.scss
+++ b/src/shared/components/groups/Popup/style.scss
@@ -11,6 +11,7 @@
   z-index: 100;
 
   .scrim {
+    display: block !important;
     background-color: transparent;
   }
   .caret {
@@ -52,6 +53,12 @@
     left: 0;
     .caret {
       left: calc(0px + 25px);
+    }
+
+  }
+  &.float-center {
+    .caret {
+      left: 7px; //makes up for the rotation
     }
 
   }
