fix plan destryo css

--- a/src/user/components/partials/PlanTable/style.scss
+++ b/src/user/components/partials/PlanTable/style.scss
@@ -26,8 +26,8 @@
   position: relative;
 }
 .buttonStack {
-  margin: 15px 0;
-  width: 130px;
+  padding: 5px;
+  width: 100%;
   button {
     display: block;
     margin: 4px !important; //margins are collapsing, and thsoe in campaign are not for some reason, so making consistenT
