--- a/src/user/components/partials/AddFakeProviderAccountModal/style.scss
+++ b/src/user/components/partials/AddFakeProviderAccountModal/style.scss
@@ -5,6 +5,45 @@
     padding: 0px 5px 0 0;
   }
 
-.instructions {
-  text-align: left;
+.input {
+  overflow: auto;
+  display: inline-block;
+  input {
+    width: 100%;
+  }
 }
+.popupWrapper {
+  position: relative;
+  width: 50px;
+  display: inline-block;
+  padding: 10px;
+}
+.helpBtn {
+  cursor: pointer;
+}
+
+.popupContainer {
+  //width: 250px;
+}
+.helpBox {
+  margin: 5px;
+  .instructions {
+    @include rems(14)
+    line-height: 1rem;
+    text-align: left;
+    padding: 10px 10px 0 10px;
+    width: 300px;
+    h5 {
+      font-size: 1rem;
+    }
+    div {
+      padding-bottom: 1rem;
+    }
+  }
+  button {
+    @include rems(14)
+    line-height: 1rem;
+    white-space: nowrap;
+  }
+}
+
