--- a/src/user/components/templates/ShowPlan/style.scss
+++ b/src/user/components/templates/ShowPlan/style.scss
@@ -5,3 +5,10 @@
   margin: 1.5rem 0 0 0;
   text-align: center;
 }
+.fakePlatformBox {
+  padding: 1rem;
+}
+.fakePlatformBoxWrapper {
+  overflow: auto;
+  width: 100%;
+}
