--- a/src/shared/components/partials/PaginationMenu/style.scss
+++ b/src/shared/components/partials/PaginationMenu/style.scss
@@ -1,3 +1,20 @@
-.topNewCampaignButton {
-  margin-bottom: 30px;
+.paginationMenu {
+  font-size: .8rem;
+  width: 50%;
+  min-width: 550px;
+  float: right;
+
+  .pageSizeSelect {
+    width: 55px;
+    label, div {
+
+    }
+  }
+
+  .pageInput {
+    width: 40px;
+  }
+  .smallBtn {
+
+  }
 }
