--- a/src/user/components/partials/AnalyticsFilters/style.scss
+++ b/src/user/components/partials/AnalyticsFilters/style.scss
@@ -1,3 +1,10 @@
+.filtersForm {
+
+  .timeRangeSelect {
+    width: 33%;
+    margin-right: 30px;
+  }
+}
 .topNewCampaignButton {
   margin-bottom: 30px;
 }
