--- a/src/user/components/partials/AnalyticsTable/style.scss
+++ b/src/user/components/partials/AnalyticsTable/style.scss
@@ -5,6 +5,7 @@
   max-height: 99000px ; //could set dynamically to show more or less rows
   @include transition(max-height, .8s, ease);
   overflow-y: hidden;
+  text-align: center;
 
   &.hidden {
     max-height: 0;
@@ -45,7 +46,7 @@
     @include cols(4)
   }
 
-  .providerContainer {
+  .tableRow {
     border-top: 1px solid $black;
     width: 100%;
 
@@ -78,30 +79,8 @@
       //padding: 10px 15px; //was spazzing out, flipping back and forth between the paddings, so just forget it
     }
 
-    .postList {
-      overflow-y: auto;
-      width: 100%;
-      min-width: 100%;
-      padding: 15px 15px 0 15px;
-    }
-    .cardWrapper {
-      max-width: 95%;
-      width: 200px;
-      overflow: auto;
-    }
-    .postCard {
-      width: 100%;
-      overflow: hidden;
-      //min-width: 200px;
-
-      &.publishedPost {
-        cursor: not-allowed !important;
-        background-color: gray !important;
-        div {
-          border-bottom: gray !important;
-        }
-      }
-
+    .column1 {
+      text-align: left;
     }
   }
 
