create links for the table

--- a/src/user/components/partials/AnalyticsTable/style.scss
+++ b/src/user/components/partials/AnalyticsTable/style.scss
@@ -57,6 +57,11 @@
     &.oddRow {
       //background: $light-purple-gray;
     }
+    &.totalsRow {
+      font-weight: bold;
+    }
+
+    //might not be usingnext two classes
     .header {
       font-weight: bold;
     }
