clean up styles so less clutter, more space

--- a/src/user/components/groups/SelectWebpageDetailsSet/style.scss
+++ b/src/user/components/groups/SelectWebpageDetailsSet/style.scss
@@ -1,9 +1,3 @@
 .filtersForm {
-
-  .timeRangeSelect {
-    width: 33%;
-  }
-}
-.topNewCampaignButton {
-  margin-bottom: 30px;
+  width: 250px;
 }
