--- a/src/user/components/partials/AnalyticsFilters/style.scss
+++ b/src/user/components/partials/AnalyticsFilters/style.scss
@@ -1,8 +1,26 @@
 .filtersForm {
 
+  .websiteFilters  {
+    padding: 20px 0px;
+
+    .websiteSelect {
+      width: 40%;
+      padding: 0 20px;
+    }
+
+    .googleBtn {
+      min-width: 200px;
+    }
+
+  }
+
+  .datetimeFilters {
+
+  }
   .timeRangeSelect {
     width: 33%;
   }
+
 }
 .topNewCampaignButton {
   margin-bottom: 30px;
