--- a/src/user/components/partials/AnalyticsTable/style.scss
+++ b/src/user/components/partials/AnalyticsTable/style.scss
@@ -2,6 +2,7 @@
 .container {
   visibility: visible;
   opacity: 1;
+  margin: 25px 0 15px 0;
   max-height: 99000px ; //could set dynamically to show more or less rows
   @include transition(max-height, .8s, ease);
   overflow-y: hidden;
