can switch between websites much better

--- a/src/user/components/partials/AnalyticsTable/style.scss
+++ b/src/user/components/partials/AnalyticsTable/style.scss
@@ -32,6 +32,10 @@
   }
   .column1 {
     @include cols(4)
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: .5rem 0 .5rem .5rem;
   }
   // whether I opt to do table or just flex:
   .column2, .column3, .column4, .column5, .column6, .column7, .cardWrapper,  {
@@ -60,6 +64,9 @@
     }
     &.totalsRow {
       font-weight: bold;
+      .column1 {
+        text-align: center;
+      }
     }
 
     //might not be usingnext two classes
