--- a/src/user/components/partials/ContentAuditTable/style.scss
+++ b/src/user/components/partials/ContentAuditTable/style.scss
@@ -95,6 +95,7 @@
       overflow-y: auto;
       width: 100%;
       min-width: 100%;
+      max-height: 500px;
       padding: 15px 15px 0 15px;
     }
     .cardWrapper {
