--- a/src/user/components/partials/AuditSiteSelector/style.scss
+++ b/src/user/components/partials/AuditSiteSelector/style.scss
@@ -4,6 +4,8 @@
     padding: 20px 0px;
 
     .websiteSelect {
+      min-width: 300px;
+      max-width: 500px;
       width: 60%;
       padding: 0 20px;
     }
