--- a/src/user/components/partials/AuditMetadata/style.scss
+++ b/src/user/components/partials/AuditMetadata/style.scss
@@ -7,18 +7,14 @@
       width: 40%;
       padding: 0 20px;
     }
-
-    .googleBtn {
-      min-width: 200px;
+    .checkbox {
+      margin: 20px;
+      width: 250px;
+      label {
+        display: inline-block;
+        cursor: pointer;
+      }
     }
-
-  }
-
-  .datetimeFilters {
-
-  }
-  .timeRangeSelect {
-    width: 33%;
   }
 
 }
