--- a/src/user/components/partials/AnalyticsTable/style.scss
+++ b/src/user/components/partials/AnalyticsTable/style.scss
@@ -32,10 +32,26 @@
   }
   .column1 {
     @include cols(4)
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
     padding: .5rem 0 .5rem .5rem;
+    position: relative; // so the externalLink floats to right properly
+    overflow: hidden;
+
+    .dimensionText {
+      display: inline-block;
+    }
+
+    .dimensionLink {
+      display: inline-block;
+      width: calc(100% - 30px);
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    a.externalLink {
+      position: absolute;
+      right: 0;
+    }
   }
   // whether I opt to do table or just flex:
   .column2, .column3, .column4, .column5, .column6, .column7, .cardWrapper,  {
