--- a/src/user/components/partials/TestResult/style.scss
+++ b/src/user/components/partials/TestResult/style.scss
@@ -21,7 +21,7 @@
   }
 
   th {
-    padding: 0 0 20px 0;
+    padding: 0 10px 0px 10px;
     text-align: center;
   }
 
@@ -33,5 +33,15 @@
 
   }
   .column2, .column3, .column4 {
+    text-align: center;
+  }
+  .totalsRow {
+    .column0, .column1, .column2, .column3, .column4  {
+      padding: 0 0 1rem 0;
+    }
+    .column1 {
+      text-align: left;
+      padding-left: .5rem;
+    }
   }
 }
