--- a/src/shared/components/elements/Navbar/style.scss
+++ b/src/shared/components/elements/Navbar/style.scss
@@ -39,10 +39,10 @@
     margin-bottom: 0;
   }
   &.navTabs > ul > li {
-    padding: 10px;
+    padding: 10px 20px;
     margin: 0px;
     //border: 1px black solid;
-    border-bottom: none;
+    //border-bottom: none;
     border-radius: 15px 15px 0 0;
     background-color: $white;
     &:hover {
