--- a/src/user/components/templates/ViewContentAudit/style.scss
+++ b/src/user/components/templates/ViewContentAudit/style.scss
@@ -19,3 +19,22 @@
 .toggleSettingsBtn {
   padding-left: 20px;
 }
+.tab {
+  border-bottom: 1px solid #ccc;
+
+  &.selected {
+    border-style: solid;
+    border-color: #ccc;
+    font-weight: bold;
+    border-bottom-color: #fff;
+    border-width: 1px 1px 0px 1px;
+  }
+  &:hover {
+    font-weight: bold;
+  }
+}
+.tabContent {
+  background-color: white;
+  padding: 20px;
+  border: solid 1px #ccc;
+}
