--- a/src/shared/components/partials/ConfigureWebsites/style.scss
+++ b/src/shared/components/partials/ConfigureWebsites/style.scss
@@ -3,6 +3,10 @@
   h2 {
     margin-top: 0;
   }
+  .viewAuditsButton {
+    display: block;
+    margin: 30px 0 0 0;
+  }
 }
 .formSection {
   margin-bottom: 10px;
@@ -14,10 +18,9 @@
     text-align: right;
     .toggleButton {
     }
-    div, a {
+    & > div, & > a {
       float: right;
       width: 100%;
-
     }
   }
 
@@ -25,4 +28,10 @@
   .expandedForm {
     margin-top: 30px;
   }
+}
+.popupWrapper {
+  position: relative;
+  width: 170px;
+  float: right;
+  text-align: center !important;
 }
