--- a/src/user/components/partials/AuditSiteSetup/style.scss
+++ b/src/user/components/partials/AuditSiteSetup/style.scss
@@ -1,15 +1,15 @@
-.filtersForm {
+.siteForm {
+  padding: 0px 10px 20px 0;
 
   .websiteFilters  {
-    padding: 20px 0px;
 
     .websiteSelect {
       width: 40%;
-      padding: 0 20px;
     }
 
     .googleBtn {
       min-width: 200px;
+      margin-bottom: 20px;
     }
 
   }
@@ -21,7 +21,4 @@
     width: 33%;
   }
 
-}
-.topNewCampaignButton {
-  margin-bottom: 30px;
 }
