--- a/src/user/components/templates/ViewAnalytics/style.scss
+++ b/src/user/components/templates/ViewAnalytics/style.scss
@@ -2,6 +2,9 @@
   margin-bottom: 25px;
   text-align: left;
 }
-.topNewCampaignButton {
-  margin-bottom: 30px;
+.websiteSettings {
+  a {
+    margin: 0 20px 30px 20px;
+    display: block;
+  }
 }
