--- a/src/user/components/partials/ContentAuditRows/style.scss
+++ b/src/user/components/partials/ContentAuditRows/style.scss
@@ -39,7 +39,7 @@
       //background: $light-purple-gray;
     }
     .header {
-      font-weight: bold;
+      //font-weight: bold;
       .previewText {
         font-weight: normal;
       }
