audit ran...now to test if it does the right stuff haha

--- a/src/user/components/groups/AuditListItemRow/style.scss
+++ b/src/user/components/groups/AuditListItemRow/style.scss
@@ -29,6 +29,7 @@
     }
 
     .dimensionTextWrapper {
+      width: 100%;
       .dimensionText {
         display: inline-block;
         min-width: 100px;
