--- a/src/user/components/groups/AuditListItemRow/style.scss
+++ b/src/user/components/groups/AuditListItemRow/style.scss
@@ -13,6 +13,7 @@
     position: relative; // so the externalLink floats to right properly
     overflow: hidden;
     min-width: 150px;
+    max-width: 600px; //arbitrary # chosen, to make sure overzealous query strings in urls don't make huge tables
 
     &.pathColumn {
       padding: .5rem 0 .5rem .5rem;
