add solutions to test

--- a/src/user/components/partials/SolutionsModal/style.scss
+++ b/src/user/components/partials/SolutionsModal/style.scss
@@ -2,7 +2,7 @@
 .modal {
   h1 {
     text-align: center;
-    font-size: 32px;
+    font-size: 32px !important;
   }
   h2 {
     text-align: center;
