--- a/src/shared/components/partials/Modal/style.scss
+++ b/src/shared/components/partials/Modal/style.scss
@@ -51,9 +51,12 @@
   }
 }
 .modalHeader {
-  border-bottom: 1px solid #f4f4f4;
   padding: 15px;
+  min-height: 50px;
 
+  &.hasBorder {
+    border-bottom: 1px solid #f4f4f4;
+  }
   .modalTitle {
   }
   .modalSubtitle {
