--- a/src/user/components/partials/CustomListForm/style.scss
+++ b/src/user/components/partials/CustomListForm/style.scss
@@ -1,3 +1,23 @@
+.fullForm {
+  .input {
+    display: inline-block;
+  }
+  h4 {
+    display: inline-block;
+    margin: 0 20px 0 0;
+  }
+
+  .formSection {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+
+    input.input {
+      width: 500px;
+    }
+  }
+}
 .filterForms {
   display: flex;
   flex-wrap: wrap;
@@ -16,7 +36,6 @@
     }
   }
   .input {
-    display: inline-block;
     width: 100px;
   }
 }
