--- a/src/user/components/partials/ContentAuditRows/style.scss
+++ b/src/user/components/partials/ContentAuditRows/style.scss
@@ -24,10 +24,10 @@
     width: 100%;
 
     &.evenRow {
-      background: $even-lighter-purple-gray;
+      //background: $light-purple-gray;
     }
     &.oddRow {
-      //background: $light-purple-gray;
+      background: $even-lighter-purple-gray;
     }
     .header {
       //font-weight: bold;
@@ -35,7 +35,7 @@
         font-weight: normal;
       }
     }
-    .topRow {
+    .topRow { //might not have this yet...
       cursor: pointer;
       text-align: left;
       padding-left: 30px;
