overhaul login view

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import 'theme/_helpers';
-
 .App {
   text-align: center;
   background-color: $user-content-bg;
+  height: 100%;
 }
 
 .App-logo {
