--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -16,8 +16,8 @@ $blue-bg: #157ba6;
 $blue-button: #176181;
 $blue-hover: #124a62;
 $blue-hover-alt: #1B7398;
-$gray: #9b9b9b;
-$gray-bg: #4a4a4a;
+$gray: #9b9b9b; //medium dark
+$gray-bg: #4a4a4a; //darker
 $green-button: #40b655;
 $green-hover: #369646;
 $red-bg: #da513d;
@@ -30,7 +30,7 @@ $ghost-blue: #058fc4;
 $ghost-red: #cb4e4e;
 $ghost-yellow: #ffbe00;
 $ghost-green: #41b655;
-$module_gray-1: #f4f4f4;
+$module_gray-1: #f4f4f4; //very light
 $module_gray-2: #efefef;
 $module_gray-3: #ebebeb;
 $module_gray-4: #e5e5e5;
