--- a/src/shared/components/partials/Login/style.scss
+++ b/src/shared/components/partials/Login/style.scss
@@ -1,17 +1,37 @@
 @import 'theme/_helpers';
 
 .fields {
+  max-width: 450px;
+  margin: auto;
+  background: white;
+  text-align: center;
+  height: 100%;
+
+  @include mq(xs) {
+    padding: 20px;
+    height: auto;
+  }
+  @include mq(sm) {
+    border-radius: 5px;
+  }
+
   h1 {
     margin-top: 0px;
   }
   h3 {
     margin-bottom: 0px;
   }
-  padding: 0;
-  text-align: center;
 
   .form {
     margin: 0 5%;
 
+  }
+}
+
+.pricingInfo {
+  margin-bottom: 30px;
+  h2 { //pricing info header
+    margin-top: 0px;
+    margin-bottom: 10px;
   }
 }
